test/files/neg/implicit-any2stringadd.scala
//> using options -Xsource:3 -Xsource-features:any2stringadd

object Test {
  true + "what"
}
