test/files/neg/implicit-any2stringadd.check
implicit-any2stringadd.scala:2: error: value + is not a member of Boolean
  true + "what"
       ^
one error found
